tests/fixtures/errors/E1110_unknown_callee.mimz
// expect: E1110
module M {
  out o: bits[8]
  o = nope(1)
}
